kube/frontend-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-app-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-399, 404"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - www.globalbank.local
    secretName: globalbank-tls-secret
  rules:
  - host: www.globalbank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
